# software-tracker

./: README.md  global-config.json  pyproject.toml
.github/workflows/: track.yml
data/cabinet/: previous.json
data/keycloak/: latest.json
data/metabase/: previous.json
data/ntfy/: latest.json  previous.json
docs/: index.html
docs/assets/: app.js  style.css
docs/data/: cabinet.json  index.json  metabase.json
openspec/changes/software-tracker-app/: design.md  proposal.md  tasks.md
openspec/changes/software-tracker-app/specs/alternatives-discovery/: spec.md
openspec/changes/software-tracker-app/specs/change-tracker/: spec.md
openspec/changes/software-tracker-app/specs/diff-and-notify/: spec.md
openspec/changes/software-tracker-app/specs/github-actions-workflow/: spec.md
openspec/changes/software-tracker-app/specs/project-config/: spec.md
openspec/changes/software-tracker-app/specs/web-ui/: spec.md
projects/cabinet/: config.json
projects/example/: config.json
projects/keycloak/: config.json
projects/metabase/: config.json
projects/ntfy/: config.json
tracker/: __main__.py  alternatives.py  config.py  diff.py  fetcher.py  llm.py  models.py  notify.py  storage.py
